tenzir/bats/data/reference/every/test_every_errors/step_01.ref
error: interval must be a positive duration
 --> <input>:1:7
  |
1 | every -1s { version }
  |       ^^^ 
  |